# PapyrusVision

./: .gitignore  COMPLETE_PROJECT_DOCUMENTATION.md  GETTING_STARTED.md  LICENSE  PROJECT_REPORT.md  README.md  STRUCTURE_OPTIMIZATION_PLAN.md  clean_macos_metadata.sh  digital_paleography_tool.py  install.py  pyproject.toml  requirements.txt  run_with_env.sh  start_paleography_tool.sh  start_papyrus_vision.sh  streamlit_hieroglyphs_app.py
apps/: digital_paleography_tool.py  streamlit_hieroglyphs_app.py  unified_papyrus_app.py
data/: data_preparation_summary.json  enhanced_hieroglyph_mappings.json  unicode.rtf  unicode_jsesh_mappings.json
data/analysis_plots/: eda_summary_report.json
data/annotations/: annotations.json  gardiner_descriptions.json  gardiner_unicode_mapping.json  test_annotations.json  train_annotations.json  val_annotations.json
docs/: COMPLETE_PROJECT_DOCUMENTATION.md  GETTING_STARTED.md  PROJECT_REPORT.md  STRUCTURE_OPTIMIZATION_PLAN.md  TECHNICAL_GUIDE.md
models/hieroglyph_model_20250807_190054/: config.yaml  metrics.json  model_final.pth  model_info.json  training_history.json
models/hieroglyph_model_20250807_190054/inference/: coco_instances_results.json  hieroglyphs_val_coco_format.json  instances_predictions.pth
notebooks/: 01_data_preparation.ipynb  02_data_analysis.ipynb  03_model_training.ipynb  04_model_evaluation.ipynb  05_model_predictions_visualization.ipynb
scripts/: dataset_utils.py  evaluation.py  hieroglyph_analysis_tool.py  jsesh_integration.py  visualization.py
src/papyrusnu/: __init__.py
src/papyrusnu/cli/: __init__.py
src/papyrusnu/config/: __init__.py
src/papyrusnu/core/: __init__.py
src/papyrusnu/utils/: __init__.py  dataset_utils.py  visualization.py
