[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "papyrusvision"
version = "1.0.0"
description = "PapyrusVision: AI-Powered Ancient Egyptian Hieroglyph Detection and Analysis"
authors = [
    {name = "Margot Belot", email = "margotbelot@icloud.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["hieroglyphs", "computer-vision", "digital-humanities", "detectron2", "egyptology", "paleography"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "opencv-python>=4.5.0",
    "pillow>=8.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "plotly>=5.0.0",
    "streamlit>=1.25.0",
    "streamlit-option-menu>=0.3.0",
    "pycocotools>=2.0.4",
    "tqdm>=4.62.0",
    "requests>=2.25.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
]
gpu = [
    "detectron2",
]

[project.urls]
Homepage = "https://github.com/MargotBelot/PapyrusVision"
Repository = "https://github.com/MargotBelot/PapyrusVision"
Documentation = "https://github.com/MargotBelot/PapyrusVision#readme"
"Bug Reports" = "https://github.com/MargotBelot/PapyrusVision/issues"

[project.scripts]
papyrusvision-detect = "scripts.hieroglyph_analysis_tool:main"
papyrusvision-paleography = "digital_paleography_tool:main"
papyrusvision-app = "streamlit_hieroglyphs_app:main"

[tool.setuptools]
packages = ["scripts"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.png", "*.jpg", "*.html"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "apps*"]
exclude = [".history*", "*.history*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
